[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mar-ps"
version = "0.1.1"
authors = [{ name = "Hudson Gouge", email = "hudson.gouge@icloud.com" }]
description = "Multi-Agent Reasoning Problem Solver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hg0428/Mar-PS"
Issues = "https://github.com/hg0428/Mar-PS/issues"
